--- a/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
@@ -28,6 +28,28 @@
         content: "\f053";
     }
 </style>
+<section class="additional-menu container-fluid">
+    <div class="container-fluid">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Макияж</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Парфюмерия</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Волосы</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Уход</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Тело</a>
+            </li>
+        </ul>
+    </div>
+</section>
+
 <form method="get">
     <div class="form-inline">
         <label>Категории: </label>
