--- a/CosmeticShop/CosmeticShop/wwwroot/css/LayoutFooter.css
+++ b/CosmeticShop/CosmeticShop/wwwroot/css/LayoutFooter.css
@@ -8,12 +8,12 @@ body .site-footer{
     padding: 40px 150px 17px 150px;
     line-height:24px;
 }
-.site-footer .container .row hr
+.site-footer .container-fluid .row hr
 {
   color:rgba(61, 29, 0, 0.5);
   opacity:0.5
 }
-.site-footer .container .row h5
+.site-footer .container-fluid .row h5
 {
   color:#271403;
   font-size:14px;
@@ -21,14 +21,14 @@ body .site-footer{
   margin-top:5px;
   letter-spacing:2px
 }
-.site-footer .container .row a
+.site-footer .container-fluid .row a
 {
     font-size: 12px;
     font-weight: 100;
     text-decoration: none;
     color:rgba(39, 20, 3, 0.7);
 }
-.site-footer .container .row .footer-links a:hover
+.site-footer .container-fluid .row .footer-links a:hover
 {
   color:rgb(61, 29, 0);
   font-weight: 600;
@@ -113,6 +113,6 @@ body .site-footer{
 .btn-circle:focus {
   box-shadow: 0 1px 1px #FFF8F4 inset, 0 0 8px #FFF8F4!important;
 }
-.privacyFooter{
+.container-fluid .privacyFooter{
     font-size: 10px;
 }
