--- a/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
@@ -1,4 +1,26 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+  ViewData["Title"] = "Home Page";
 }
-<p>This is Home Page!</p>
+<section class="additional-menu container-fluid">
+  <div class="container-fluid">
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Макияж</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Парфюмерия</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Волосы</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Уход</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Тело</a>
+      </li>
+    </ul>
+  </div>
+</section>
+
+
