HomeIndex Carusel added html js css

--- a/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Home/Index.cshtml
@@ -23,4 +23,93 @@
   </div>
 </section>
 
+<section class="carusel-element container-fluid">
+  <div class="container-fluid">
 
+    <h2 class="text-center">Новинки</h2>
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    
+      <!-- Your slides -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="card-group">
+            <div class="card text-center border-0">
+              <img src="/image/card/first.png" class="card-img card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle text-muted">Card subtitle</h6>
+                <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
+                </h4>
+                <a href="#" class="btn">Добавить в корзину</a>
+              </div>
+            </div>
+            <div class="card text-center border-0">
+              <img src="/image/card/second.png" class="card-img card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle text-muted">Card subtitle</h6>
+                <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
+                </h4>
+                <a href="#" class="btn">Добавить в корзину</a>
+              </div>
+            </div>
+            <div class="card text-center border-0">
+              <img src="/image/card/third.png" class="card-img card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle text-muted">Card subtitle</h6>
+                <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
+                </h4>
+                <a href="#" class="btn">Добавить в корзину</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="card-group">
+            <div class="card text-center border-0">
+              <img src="/image/card/fourth.png" class="card-img card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle text-muted">Card subtitle</h6>
+                <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
+                </h4>
+                <a href="#" class="btn">Добавить в корзину</a>
+              </div>
+            </div>
+            <div class="card text-center border-0">
+              <img src="/image/card/fifth.png" class="card-img card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle text-muted">Card subtitle</h6>
+                <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
+                </h4>
+                <a href="#" class="btn">Добавить в корзину</a>
+              </div>
+            </div>
+            <div class="card text-center border-0">
+              <img src="/image/card/sisxth.png" class="card-img card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <h6 class="card-subtitle text-muted">Card subtitle</h6>
+                <h4 class="card-price">120<small class="card-price-cost text-muted">руб.коп.</small>
+                </h4>
+                <a href="#" class="btn">Добавить в корзину</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <img src="/image/card/arrow-left.png" alt="">
+
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <img src="/image/card/arrow-right.png" alt="">
+      </a>
+    </div>
+
+  </div>
+
+</section>
