--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="~/css/LayoutBody.css" />
     <link rel="stylesheet" href="~/css/LayoutFooter.css" />
     <link rel="stylesheet" href="~/css/AdditionalHomeIndex.css" />
+    <link rel="stylesheet" href="~/css/CardProduct.css" />
+
 </head>
 
 <body>
