--- a/CosmeticShop/CosmeticShop/Views/Orders/OrderHistory.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Orders/OrderHistory.cshtml
@@ -6,7 +6,7 @@
 {
     @foreach (var opa in order.OrderProuctAccountings)
     {
-        <p>@opa.ProductContainer.ProductName</p>
+        <p>@opa.Cost</p>
     }
     <hr>
 }
