Emoloyee Delivery Orders added into models

--- a/CosmeticShop/CosmeticShop/Views/Orders/OrderHistory.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Orders/OrderHistory.cshtml
@@ -10,7 +10,7 @@
         <div>
             <p>@opa.Cost</p>
             <p>@opa.ProductContainer.ProductName</p>
-            <p>@opa.</p>
+            <p>@opa.ProductContainer.CountProducts</p>
         </div>
 
     }
