--- a/CosmeticShop/CosmeticShop/Views/PersonalArea/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/PersonalArea/Index.cshtml
@@ -1,16 +1,24 @@
 @if(User.IsInRole("employee"))
 {
+    <h2>Права рабочего</h2>
     <div>
         <a asp-action="Index" asp-controller="ProductContainers">Продукты</a>
     </div>
     <div>
         <a asp-action="Index" asp-controller="ProductCategories">Категории</a>
     </div>   
-    
+    <hr>
 }
 @if(User.IsInRole("admin"))
 {
-    <p>You are admin</p>
+    <h2>Права администратора</h2>
+    <div>
+        <a asp-action="Index" asp-controller="Roles">Роли</a>
+    </div>   
+    <div>
+        <a asp-action="Index" asp-controller="Users">Пользователи</a>
+    </div>   
+    <hr>
 }
 
 <a asp-action="OrderHistory" asp-controller="Orders">История заказов</a>
