--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -86,8 +86,7 @@
                                     asp-action="Index">Личный
                                         кабинет</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" asp-area="" asp-controller="PersonalArea"
-                                    asp-action="">Выход</a>
+                                    <a class="dropdown-item" asp-controller="Account" asp-action="Logout">Выход</a>
                                 }
                             </div>
                         </div>
