--- a/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="~/css/LayoutFooter.css" />
     <link rel="stylesheet" href="~/css/AdditionalHomeIndex.css" />
     <link rel="stylesheet" href="~/css/CardProduct.css" />
+    <link rel="stylesheet" href="~/css/MainHomeIndex.css"/>
+    <link rel="stylesheet" href="~/css/TraidingFilter.css"/>
 
 </head>
 
