--- a/CosmeticShop/CosmeticShop/Views/OrderProcessing/OrdersToCollect.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/OrderProcessing/OrdersToCollect.cshtml
@@ -4,10 +4,10 @@
 {
     <div>
         <p>Номер заказа: @item.Order.Id</p>
-        <a href="#">Детали</a>
+        <a asp-action="Details" asp-controller="OrderProcessing" asp-route-id="@item.Order.Id">Детали</a>
 
-        <form method="POST">
-            <input type="button" value="Заказ собран">
+        <form method="POST" asp-action="ConfirmOrderCollection" asp-controller="OrderProcessing" asp-route-id="@item.Id">
+            <input type="submit" value="Заказ собран">
         </form>
     </div>
 }
